<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/primaryImage"
        android:layout_width="420dp"
        android:layout_height="275dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <ImageButton
        android:id="@+id/leftBtn"
        android:layout_width="wrap_content"
        android:layout_height="124dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="106dp"
        android:onClick="prevImage"
        app:layout_constraintEnd_toStartOf="@+id/primaryImage"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_chevron_left_black_24dp" />

    <ImageButton
        android:id="@+id/rightBtn"
        android:layout_width="wrap_content"
        android:layout_height="124dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="106dp"
        android:onClick="nextImage"
        app:layout_constraintStart_toEndOf="@+id/primaryImage"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_chevron_right_black_24dp" />

    <TextView
        android:id="@+id/captionText"
        android:layout_width="420dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="16dp"
        android:text="@string/caption_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/primaryImage" />

    <TextView
        android:id="@+id/locationText"
        android:layout_width="300dp"
        android:layout_height="19dp"
        android:layout_marginEnd="33dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="8dp"
        android:text="@string/location_text"
        app:layout_constraintEnd_toStartOf="@+id/editButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateText" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="8dp"
        android:text="@string/date_text"
        app:layout_constraintEnd_toStartOf="@+id/editButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/captionText" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:layout_marginTop="8dp"
        android:onClick="createEditDialog"
        android:text="@string/edit_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/captionText" />

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="237dp"
        android:layout_height="87dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:onClick="openSearchActivity"
        android:text="@string/search_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationText" />

    <Button
        android:id="@+id/shareBtn"
        android:layout_width="237dp"
        android:layout_height="87dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/share_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBtn" />

    <Button
        android:id="@+id/snapBtn"
        android:layout_width="237dp"
        android:layout_height="87dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="openCameraPreview"
        android:text="@string/snap_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shareBtn" />

</android.support.constraint.ConstraintLayout>